--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "tsnd -r tsconfig-paths/register --transpile-only --respawn --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "nodemailer": "^6.7.3",
