--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,15 @@
     "baseUrl": ".",
     "paths": {
       "@models": ["./src/models/index.ts"],
+      "@controllers": ["./src/controllers/index.ts"],
+      "@services": ["./src/services/index.ts"],
       "@repositories": ["./src/repositories/index.ts"],
+      "@middleware/*": ["./src/middleware/*"],
       "@interfaces": ["./src/interfaces/index.ts"],
       "@providers/*": ["./src/providers/*"],
       "@enum/*": ["./src/enum/*"],
       "@dto/*": ["src/dto/*"],
-      "@middleware/*": ["./src/middleware/*"]
+      "@config/*": ["src/config/*"],
     } 
   },
   "include": [
