--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "tsnd -r tsconfig-paths/register --transpile-only --respawn --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
@@ -17,7 +19,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/nodemailer": "^6.4.4",
     "@types/pg": "^8.6.5",
     "@types/uuid": "^8.3.4",
