refactory: change DB to MSSQL

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - default
     volumes:
     - .:/usr/src/app
+    networks:
+      - compose-network
 
   postgres-compose:
     image: postgres
