--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsnd -r tsconfig-paths/register --transpile-only --respawn --ignore-watch node_modules src/server.ts",
-    "infra:dev": "docker-compose --profile dev up"
+    "dev": "tsnd -r tsconfig-paths/register --transpile-only --respawn --ignore-watch node_modules src/server.ts",
+    "infra:dev": "docker-compose --profile dev up",
+    "build": "tsc"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -15,8 +16,8 @@
     "exceljs": "^4.3.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "mssql": "^7.3.5",
     "nodemailer": "^6.7.3",
-    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.6",
     "uuid": "^8.3.2"
@@ -26,8 +27,8 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/nodemailer": "^6.4.4",
-    "@types/pg": "^8.6.5",
     "@types/uuid": "^8.3.4",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.4"
