--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "tsnd -r tsconfig-paths/register --transpile-only --respawn --ignore-watch node_modules src/server.ts",
-    "infra:dev": "docker-compose --profile dev up",
-    "build": "tsc"
+    "start": "tsnd -r tsconfig-paths/register --transpile-only --respawn --ignore-watch node_modules src/server.ts",
+    "infra": "docker-compose --profile infra up",
+    "build:docker": "docker build -t app .",
+    "step:1": "az login",
+    "step:2": "az acr login --name tagcontainer.azurecr.io",
+    "step:3": "docker tag app tagcontainer.azurecr.io/app",
+    "step:4": "docker push tagcontainer.azurecr.io/app"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -16,8 +20,8 @@
     "exceljs": "^4.3.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mssql": "^7.3.5",
     "nodemailer": "^6.7.3",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.6",
     "uuid": "^8.3.2"
@@ -27,6 +31,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/nodemailer": "^6.4.4",
+    "@types/pg": "^8.6.5",
     "@types/uuid": "^8.3.4",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^1.1.8",
