--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     build: .
     ports:
-      - ${PORT}:${PORT}
+      - 4000:4000
     depends_on:
       - postgres-compose
     profiles:
@@ -20,14 +20,14 @@ services:
   postgres-compose:
     image: postgres
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: changeme
     profiles:
       - infra
       - dev
       - default
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - "5115:5432"
     volumes:
       - ./database:/var/lib/postgresql/data
     networks:
@@ -36,13 +36,13 @@ services:
   pgadmin-compose:
     image: dpage/pgadmin4
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+      PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
+      PGADMIN_DEFAULT_PASSWORD: admin
     profiles:
       - dev
       - default
     ports:
-      - "${PGADMIN_PORT}:80"
+      - "5050:80"
     depends_on:
       - postgres-compose
     networks:
